microk8s/staging/dvr/bazarr.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
  namespace: dvr
  labels:
    app: bazarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bazarr
  template:
    metadata:
      labels:
        app: bazarr
    spec:
      volumes:
      - name: bazarr-config-vol
        persistentVolumeClaim:
          claimName: bazarr-config-claim
      - name: dvr-tv-vol
        persistentVolumeClaim:
          claimName: dvr-tv-claim
        
      containers:
      - name: bazarr
        image: linuxserver/bazarr:latest
        ports:
        - name: web
          containerPort: 6767
        volumeMounts:
        - name: bazarr-config-vol
          mountPath: "/config"
        - name: dvr-tv-vol
          mountPath: "/tv"
---
apiVersion: v1
kind: Service
metadata:
  name: bazarr
  namespace: dvr
spec:
  type: ClusterIP
  selector:
    app: bazarr
  ports:
  - name: web
    protocol: TCP
    port: 6767
    targetPort: web
