microk8s/staging/dvr/sonarr.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: dvr
  labels:
    app: sonarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
      - name: sonarr
        image: linuxserver/sonarr:latest
        ports:
        - name: web
          containerPort: 8989

---
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: dvr
spec:
  type: ClusterIP
  selector:
    app: sonarr
  ports:
  - name: web
    protocol: TCP
    port: 8989
    targetPort: web
