microk8s/staging/dvr/transmission.yml
# https://hub.docker.com/r/linuxserver/transmission

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmission
  namespace: dvr
  labels:
    app: transmission
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transmission
  template:
    metadata:
      labels:
        app: transmission
    spec:
      volumes:
      - name: transmission-config-vol
        persistentVolumeClaim:
          claimName: transmission-config-claim
      - name: transmission-watch-vol
        persistentVolumeClaim:
          claimName: transmission-watch-claim
      - name: dvr-downloads-vol
        persistentVolumeClaim:
          claimName: dvr-downloads-claim
      containers:
      - name: transmission
        image: linuxserver/transmission:latest
        ports:
        - name: web
          containerPort: 9091
        - name: torrent
          containerPort: 51413
        volumeMounts:
        - name: transmission-config-vol
          mountPath: "/config"
        - name: transmission-watch-vol
          mountPath: "/watch"
        - name: dvr-downloads-vol
          mountPath: "/downloads"
---
apiVersion: v1
kind: Service
metadata:
  name: transmission
  namespace: dvr
spec:
  type: ClusterIP
  selector:
    app: transmission
  ports:
  - name: web
    protocol: TCP
    port: 9091
    targetPort: web
