microk8s/staging/dvr/sonarr-ing.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr-ext
  namespace: dvr
spec:
  entrypoints:
  - https
  routes:
  - match: Host(`hal.rask.dk`) && PathPrefix(`/sonarr`)
    kind: Rule
    services:
    - name: sonarr
      port: 8989
    middlewares:
    - name: traefik-auth
      namespace: traefik
  tls:
    certResolver: default

# ---
# apiVersion: traefik.containo.us/v1alpha1
# kind: IngressRoute
# metadata:
#   name: sonarr-int
#   namespace: dvr
# spec:
#   entrypoints:
#   - https
#   routes:
#   - match: Host(`hal.rask.dk`) && PathPrefix(`/sonarr`) && SOURCEIP??
#     kind: Rule
#     services:
#     - name: sonarr
#       port: 8989
#   tls:
#     certResolver: default
